--- a/index.html
+++ b/index.html
@@ -11,26 +11,38 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <!-- Particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="assets/assets/images/Anshika.jpg" type="image/jpg" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Anshika Singh | AIML & Web Developer Portfolio" />
+  <meta name="author" content="Anshika Singh" />
 
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
     #particles-js {
       position: fixed;
       width: 100%;
       height: 100%;
       z-index: -1;
     }
+
     a.button-hover {
       transition: all 0.3s ease;
     }
+
     a.button-hover:hover {
       transform: scale(1.05);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
+
     .hover-invert:hover {
       background-color: white;
       color: black;
@@ -38,10 +50,11 @@
   </style>
 </head>
 <body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
+
   <!-- Particles Container -->
   <div id="particles-js"></div>
 
-  <!-- Navbar (fixed version with improved contrast) -->
+  <!-- Navbar -->
   <header class="fixed top-0 left-0 w-full z-[999] bg-black text-white shadow-md">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-cyan-400 flex items-center gap-2">
@@ -61,9 +74,7 @@
           <a href="certificates.html" class="hover:text-cyan-400 transition">Certificates</a>
           <a href="contact.html" class="hover:text-cyan-400 transition">Contact</a>
         </nav>
-        <button class="md:hidden text-white" onclick="document.getElementById('mobileMenu').classList.toggle('hidden')">
-          ☰
-        </button>
+        <button class="md:hidden text-white" onclick="document.getElementById('mobileMenu').classList.toggle('hidden')">☰</button>
       </div>
     </div>
     <div id="mobileMenu" class="md:hidden hidden px-6 pb-4 text-sm text-gray-200">
@@ -87,10 +98,10 @@
           A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
         </p>
         <p class="text-base text-gray-400 mb-4 leading-relaxed" data-i18n="values">
-          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic.. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
+          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
         </p>
         <div class="flex flex-wrap gap-4">
-          <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
+          <a href="assets/assets/images/Anshika Singh final 1.pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
           <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover-invert button-hover">🌐 Web Projects</a>
           <a href="ml-projects.html" class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black button-hover">🤖 AIML Projects</a>
         </div>
@@ -141,7 +152,7 @@
       en: {
         greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
         intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-        values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic.. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
+        values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
       }
     };
 
@@ -156,21 +167,24 @@
     });
   </script>
 
-  <!-- Particle.js config -->
+  <!-- Particle.js -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js" defer></script>
   <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 70 },
-        size: { value: 3 },
-        color: { value: "#00ffff" },
-        move: { enable: true, speed: 1 },
-        line_linked: { enable: true, color: "#00ffff" },
-      },
-      interactivity: {
-        events: {
-          onhover: { enable: true, mode: "repulse" }
+    window.addEventListener('load', () => {
+      particlesJS("particles-js", {
+        particles: {
+          number: { value: 70 },
+          size: { value: 3 },
+          color: { value: "#00ffff" },
+          move: { enable: true, speed: 1 },
+          line_linked: { enable: true, color: "#00ffff" }
+        },
+        interactivity: {
+          events: {
+            onhover: { enable: true, mode: "repulse" }
+          }
         }
-      }
+      });
     });
   </script>
 </body>
