--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/assets/images/Anshika.jpg" type="image/jpg" />
-
-  <meta name="description" content="Anshika Singh | AIML & Web Developer Portfolio" />
-  <meta name="author" content="Anshika Singh" />
-
   <style>
     html {
       scroll-behavior: smooth;
@@ -29,53 +23,41 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-    }
-    a.button-hover {
-      transition: all 0.3s ease;
-    }
-    a.button-hover:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
-    }
-    .hover-invert:hover {
-      background-color: white;
-      color: black;
+      pointer-events: none; /* IMPORTANT: allow clicks to pass through */
+      top: 0;
+      left: 0;
     }
     header, section, footer {
-  position: relative;
-  z-index: 10;
-}
-
+      position: relative;
+      z-index: 10;
+    }
   </style>
 </head>
 
 <body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
+
+  <!-- Particles background -->
   <div id="particles-js"></div>
 
   <!-- Navbar -->
-  <header class="fixed top-0 left-0 w-full z-[999] bg-black text-white shadow-md">
+  <header class="fixed top-0 left-0 w-full z-50 bg-black text-white shadow-md">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-cyan-400 flex items-center gap-2">
         <img src="assets/assets/images/Anshika.jpg" alt="Profile Icon" class="w-8 h-8 rounded-full border border-cyan-400" />
         Anshika Singh
       </h1>
-      <div class="flex items-center gap-4">
-        <select id="langSwitcher" class="text-sm text-white bg-gray-700 rounded px-2 py-1 border border-gray-600">
-          <option value="en">English</option>
-          <option value="hi">हिंदी</option>
-        </select>
-        <nav class="hidden md:flex space-x-4 text-gray-200 font-medium">
-          <a href="#" class="hover:text-cyan-400 transition">Home</a>
-          <a href="techstack.html" class="hover:text-cyan-400 transition">Tech Stack</a>
-          <a href="ml-projects.html" class="hover:text-cyan-400 transition">ML Projects</a>
-          <a href="web-projects.html" class="hover:text-cyan-400 transition">Web Projects</a>
-          <a href="certificates.html" class="hover:text-cyan-400 transition">Certificates</a>
-          <a href="contact.html" class="hover:text-cyan-400 transition">Contact</a>
-        </nav>
-        <button id="menuToggleBtn" class="md:hidden text-white text-2xl">☰</button>
-      </div>
+      <nav class="hidden md:flex space-x-6 text-gray-200 font-medium">
+        <a href="#" class="hover:text-cyan-400">Home</a>
+        <a href="techstack.html" class="hover:text-cyan-400">Tech Stack</a>
+        <a href="ml-projects.html" class="hover:text-cyan-400">ML Projects</a>
+        <a href="web-projects.html" class="hover:text-cyan-400">Web Projects</a>
+        <a href="certificates.html" class="hover:text-cyan-400">Certificates</a>
+        <a href="contact.html" class="hover:text-cyan-400">Contact</a>
+      </nav>
+      <button id="menuToggleBtn" class="md:hidden text-white text-2xl">☰</button>
     </div>
-    <div id="mobileMenu" class="md:hidden hidden px-6 pb-4 text-sm text-gray-200">
+    <!-- Mobile Menu -->
+    <div id="mobileMenu" class="hidden md:hidden px-6 pb-4 text-sm text-gray-200">
       <a href="#" class="block py-1 hover:text-cyan-400">Home</a>
       <a href="techstack.html" class="block py-1 hover:text-cyan-400">Tech Stack</a>
       <a href="ml-projects.html" class="block py-1 hover:text-cyan-400">ML Projects</a>
@@ -89,139 +71,77 @@
   <section class="pt-32 pb-20 px-6 animate__animated animate__fadeIn">
     <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
       <div>
-        <h2 class="text-4xl md:text-5xl font-extrabold mb-6" data-i18n="greeting">
+        <h2 class="text-4xl md:text-5xl font-extrabold mb-6">
           Hi, I'm <span class="text-cyan-400">Anshika Singh</span>
         </h2>
-        <p class="text-lg text-gray-300 mb-6" data-i18n="intro">
-          A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
+        <p class="text-lg text-gray-300 mb-6">
+          A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span>.
         </p>
-        <p class="text-base text-gray-400 mb-4 leading-relaxed" data-i18n="values">
-          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
-        </p>
-        <div class="flex flex-wrap gap-4">
-          <a href="assets/assets/images/Anshika Singh final 1.pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
-          <a href="web-projects.html" class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover-invert button-hover">🌐 Web Projects</a>
-          <a href="ml-projects.html" class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black button-hover">🤖 AIML Projects</a>
-        </div>
+        <a href="assets/assets/images/Anshika Singh final 1.pdf" target="_blank" class="px-6 py-3 mt-4 inline-block rounded-full bg-pink-600 text-white hover:bg-pink-700 transition">📄 View Resume</a>
       </div>
       <div class="text-center">
-        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
+        <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 rounded-full object-cover border-4 border-cyan-400 shadow-xl animate__animated animate__zoomIn" />
       </div>
     </div>
   </section>
 
-  <!-- Connect Section -->
-  <section class="py-20 px-6">
-    <div class="max-w-6xl mx-auto">
-      <h3 class="text-3xl font-bold text-center text-cyan-300 mb-12">🔗 Connect with Me</h3>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center">
-        <a href="https://github.com/Anshika09Singh" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-cyan-500/50 transform hover:-translate-y-1 transition">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-14 h-14 mx-auto mb-4" alt="GitHub" />
-          <h4 class="text-xl font-semibold">GitHub</h4>
-          <p class="text-gray-400 text-sm">Explore my open-source work</p>
-        </a>
-        <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-blue-500/50 transform hover:-translate-y-1 transition">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-14 h-14 mx-auto mb-4" alt="LinkedIn" />
-          <h4 class="text-xl font-semibold">LinkedIn</h4>
-          <p class="text-gray-400 text-sm">Professional updates</p>
-        </a>
-        <a href="https://leetcode.com/u/Anshika09singh/" target="_blank" class="rounded-xl border border-gray-700 p-6 hover:shadow-yellow-400/50 transform hover:-translate-y-1 transition">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" class="w-12 h-12 mx-auto mb-4 bg-white rounded-full p-1" alt="LeetCode" />
-          <h4 class="text-xl font-semibold">LeetCode</h4>
-          <p class="text-gray-400 text-sm">Coding practice & challenges</p>
-        </a>
-      </div>
+  <!-- Connect With Me Section -->
+<section class="relative z-10 py-20 px-6">
+  <div class="max-w-6xl mx-auto">
+    <h3 class="text-3xl md:text-4xl font-bold text-center text-cyan-300 mb-12 animate__animated animate__fadeInDown">🔗 Connect with Me</h3>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 text-center animate__animated animate__fadeInUp animate__delay-1s">
+      
+      <!-- GitHub -->
+      <a href="https://github.com/Anshika09Singh" target="_blank" class="bg-gray-900 p-6 rounded-2xl border border-gray-700 hover:shadow-cyan-500/50 hover:scale-105 transform transition duration-300">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-14 h-14 mx-auto mb-4" alt="GitHub" />
+        <h4 class="text-xl font-semibold text-white mb-1">GitHub</h4>
+        <p class="text-gray-400 text-sm">Explore my open-source projects</p>
+      </a>
+
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank" class="bg-gray-900 p-6 rounded-2xl border border-gray-700 hover:shadow-blue-500/50 hover:scale-105 transform transition duration-300">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-14 h-14 mx-auto mb-4" alt="LinkedIn" />
+        <h4 class="text-xl font-semibold text-white mb-1">LinkedIn</h4>
+        <p class="text-gray-400 text-sm">Connect for updates & networking</p>
+      </a>
+
+      <!-- LeetCode -->
+      <a href="https://leetcode.com/u/Anshika09singh/" target="_blank" class="bg-gray-900 p-6 rounded-2xl border border-gray-700 hover:shadow-yellow-400/50 hover:scale-105 transform transition duration-300">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" class="w-12 h-12 mx-auto mb-4 bg-white rounded-full p-1" alt="LeetCode" />
+        <h4 class="text-xl font-semibold text-white mb-1">LeetCode</h4>
+        <p class="text-gray-400 text-sm">My coding challenges & solutions</p>
+      </a>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Footer -->
-  <footer class="text-center py-6 bg-black border-t border-gray-800">
+  <footer class="text-center py-6 bg-black border-t border-gray-800 relative z-10">
     <p class="text-gray-500">© 2025 Anshika Singh • AIML & Web Developer | Crafted with ❤️</p>
   </footer>
 
-  <!-- JavaScript: Mobile Toggle + Language Switch -->
-  <!-- <script>
-    document.addEventListener("DOMContentLoaded", function () {
+  <!-- Scripts -->
+  <script>
+    // Mobile menu toggle
+    document.addEventListener("DOMContentLoaded", () => {
       const menuToggleBtn = document.getElementById("menuToggleBtn");
       const mobileMenu = document.getElementById("mobileMenu");
-      menuToggleBtn.addEventListener("click", function () {
+
+      menuToggleBtn.addEventListener("click", () => {
         mobileMenu.classList.toggle("hidden");
       });
-
-      const translations = {
-        hi: {
-          greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
-          intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> करता है।",
-          values: "मैं समय पर काम जमा करती हूँ और हर प्रोजेक्ट में ईमानदारी और ज़िम्मेदारी से काम करती हूँ।"
-        },
-        en: { -->
-          <!-- greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
-          intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-          values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
-        }
-      }; -->
-<!-- 
-      document.getElementById("langSwitcher").addEventListener("change", function () {
-        const lang = this.value;
-        document.querySelectorAll("[data-i18n]").forEach(el => {
-          const key = el.getAttribute("data-i18n");
-          if (translations[lang][key]) {
-            el.innerHTML = translations[lang][key];
-          }
-        });
-      });
     });
-  </script> -->
-  <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const menuToggleBtn = document.getElementById("menuToggleBtn");
-    const mobileMenu = document.getElementById("mobileMenu");
-    const langSwitcher = document.getElementById("langSwitcher");
+  </script>
 
-    menuToggleBtn.addEventListener("click", function () {
-      mobileMenu.classList.toggle("hidden");
-    });
-
-    const translations = {
-      hi: {
-        greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
-        intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> करता है।",
-        values: "मैं समय पर काम जमा करती हूँ और हर प्रोजेक्ट में ईमानदारी और ज़िम्मेदारी से काम करती हूँ।"
-      },
-      en: {
-        greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
-        intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-        values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
-      }
-    };
-
-    function updateLanguage(lang) {
-      document.querySelectorAll("[data-i18n]").forEach(el => {
-        const key = el.getAttribute("data-i18n");
-        if (translations[lang] && translations[lang][key]) {
-          el.innerHTML = translations[lang][key];
-        }
-      });
-    }
-
-    // Apply the default language (English) on load
-    updateLanguage(langSwitcher.value);
-
-    // Change language on selection
-    langSwitcher.addEventListener("change", function () {
-      updateLanguage(this.value);
-    });
-  });
-</script>
-
-
-  <!-- Particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+  <!-- Correct Particles.js CDN -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
     window.addEventListener('load', () => {
       particlesJS("particles-js", {
         particles: {
-          number: { value: 70 },
+          number: { value: 60 },
           size: { value: 3 },
           color: { value: "#00ffff" },
           move: { enable: true, speed: 1 },
@@ -235,5 +155,6 @@
       });
     });
   </script>
+
 </body>
 </html>
